# 2026-Strategy-Scouting

./: .gitignore  README.md  Scouting Defense Scan.bat  Scouting Match Scan.bat  Strategy Dashboard.bat  UV_SCRIPTS.md  UV_SETUP_SUMMARY.md  pyproject.toml  requirements.txt.deprecated
Scouting-App/: DoFDefenseScouting.js  DoFscouting.js  TBAInterface.js  index-defense.html  index.html
Scouting-Scripts/: 2026_schema.txt  defense_scouting_2026.py  file_to_MongoDB_v1.py  find_missing_data.py  prescouting_make_template.py  prescouting_upload.py  pyproject.toml  requirements.txt.deprecated  scouting_2026.py  training_checking_2026.py  training_collection_2026.py
Strategy-Dashboard/: config.py  format_photos.py  main.py  pyproject.toml  utils.py
Strategy-Dashboard/pages/: all_teams.py  alliance_explorer.py  defense.py  match_schedule.py  match_scouter.py  niche_finder.py  team_summary.py
Tools/: MongoDB_to_MongoDB_v1.py  RandomData2026_v1.py  RandomData2026_v2.py  Schema_2025.txt  Schema_2026.txt  config.py  credentials.py.example  get_event_list_of_teams_2025_v1.py  get_event_matches_2022_v2.py  get_event_matches_2025_v2.py  get_event_matches_2026_v1.py  get_event_schedule_from_mongodb_2025_v1.py  get_event_teams_simple_2025_v1.py  get_events_by_year_keys_2026_v1.py  pyproject.toml
